@@ -1946,7 +1946,7 @@ NEEDS A REWRITE - SO DISABLED FOR 0.53
 		You can edit, add or delete repositories in the repository preferences.
 	</para>
 	<para>
-		Open the repository editor with <menuchoice><guimenu>Preferences</guimenu>
+		Open the repository editor with <menuchoice><guimenu>Settings</guimenu>
 		<guimenuitem>Repositories</guimenuitem></menuchoice> from the menu.
 	</para>
 
@@ -2237,7 +2237,7 @@ NEEDS A REWRITE - SO DISABLED FOR 0.53
 	</para>
 
 	<para>
-		Choose <menuchoice><guimenu>Preferences</guimenu><guimenuitem>
+		Choose <menuchoice><guimenu>Settings</guimenu><guimenuitem>
 		Filters</guimenuitem></menuchoice> from the menu.
 	</para>
 
@@ -2337,7 +2337,7 @@ NEEDS A REWRITE - SO DISABLED FOR 0.53
 
 
 <!-- sect1 id="snyaptic-prefs">
-	<title>Preferences</title>
+	<title>Settings</title>
 
 	NEEDS SOME LOVE - THEREFOR DISABLED
 
