@@ -7,6 +7,8 @@ synaptic (0.62.3) unstable; urgency=low
     - bybye arch-build, hello "bzr-buildpackage"
   * common/rinstallprogress.cc:
     - fix typo and incorrect message (LP: #139760)
+  * help/C/synaptic.xml:
+    -  "preferences" -> "settings", closes: #406430
 
  -- 
 
